--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,7 +1,14 @@
 // Backgrounds
-$background-primary: #BEE5FD;
-$background-secondary: #B0E7E8;
+$background-primary: #bee5fd;
+$background-secondary: #b0e7e8;
 
 
 // Focus
-$focus-primary: #FFF874;
+$focus-primary: #fff874;
+
+// Text
+$very-dark-text: #212121;
+$dark-text: #424242;
+$medium-text: #616161;
+$light-text: #9e9e9e;
+$very-light-text: #bdbdbd;
