--- a/containers/App/Header/styles.scss
+++ b/containers/App/Header/styles.scss
@@ -1,16 +1,19 @@
 @import 'styles/variables';
 
 .Header {
-  background: $background-secondary;
-  padding: 1rem;
-  display: flex;
   align-items: flex-end;
+  background: $background-secondary;
+  display: flex;
   justify-content: space-between;
+  padding: 1rem 0;
+  box-shadow: 1px 10px 10px -6px #777;
+  position: fixed;
+  width: 100%;
 }
 
 .Logo {
-  width: 10rem;
   margin-right: 2rem;
+  width: 8rem;
 }
 
 .Form {
@@ -19,34 +22,38 @@
 }
 
 .SearchBox {
-  border: 0;
-  border-bottom: 1px solid $focus-primary;
   background: transparent;
-  height: 1.5rem;
+  border: 0;
   margin-right: 2rem;
-  width: 16rem;
+  width: 14rem;
+  &:focus {
+    border-bottom: 1px solid $focus-primary;
+    padding-bottom: .5rem;
+  }
 }
 
 .CategoryBox {
-  width: 10rem;
+  width: 8rem;
   div {
     border: 0;
+    outline: none;
   }
 }
 
 .Submit {
+  height: 0;
   visibility: hidden;
   width: 0;
-  height: 0;
 }
 
 .List {
   ul {
     display: flex;
     li {
-      padding: 1rem 1rem 0 1rem;
       color: $dark-text;
       cursor: pointer;
+      margin: 0;
+      padding: 1rem 1rem 0 1rem;
       &:hover {
         color: $very-dark-text;
       }
