--- a/pages/index/styles.scss
+++ b/pages/index/styles.scss
@@ -1,21 +1,19 @@
-h1, a {
-  font-family: "Arial";
+.Section {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 35rem;
+  width: 100%;
 }
 
-ul {
-  padding: 0;
+.Characters {
+  background-image: url('/static/wall/head.png');
 }
 
-li {
-  list-style: none;
-  margin: 5px 0;
+.Locations {
+  background-image: url('/static/wall/shadow.png');
 }
 
-a {
-  text-decoration: none;
-  color: blue;
-}
-
-a:hover {
-  opacity: 0.6;
+.Episodes {
+  background-image: url('/static/wall/sun.jpg');
 }
