Move Character Section to own components

--- a/pages/index/components/Characters/styles.scss
+++ b/pages/index/components/Characters/styles.scss
@@ -6,11 +6,6 @@
   width: 100%;
 }
 
-
-.Locations {
-  background-image: url('/static/wall/shadow.png');
-}
-
-.Episodes {
-  background-image: url('/static/wall/sun.jpg');
+.Characters {
+  background-image: url('/static/wall/head.png');
 }
