--- a/containers/App/Header/styles.scss
+++ b/containers/App/Header/styles.scss
@@ -1,24 +1,25 @@
 @import 'styles/variables';
 
 .Header {
-  align-items: flex-end;
+  align-items: center;
   background: $background-secondary;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.25);
   display: flex;
+  height: 3.25rem;
   justify-content: space-between;
-  padding: 1rem 0;
-  box-shadow: 1px 10px 10px -6px #777;
+  padding: 0;
   position: fixed;
   width: 100%;
 }
 
 .Logo {
   margin-right: 2rem;
-  width: 8rem;
+  width: 5rem;
 }
 
 .Form {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .SearchBox {
@@ -28,7 +29,7 @@
   width: 14rem;
   &:focus {
     border-bottom: 1px solid $focus-primary;
-    padding-bottom: .5rem;
+    padding-bottom: .3rem;
   }
 }
 
@@ -53,7 +54,7 @@
       color: $dark-text;
       cursor: pointer;
       margin: 0;
-      padding: 1rem 1rem 0 1rem;
+      padding: 0 1rem;
       &:hover {
         color: $very-dark-text;
       }
