--- a/containers/App/styles.scss
+++ b/containers/App/styles.scss
@@ -1,5 +1,9 @@
-#HomeContainer {
+.Container {
   margin: 20;
   padding: 20;
   border: '1px solid #DDD';
+}
+
+.Content {
+  padding-top: 3.2rem;
 }
