--- a/pages/index/components/Characters/styles.scss
+++ b/pages/index/components/Characters/styles.scss
@@ -9,3 +9,9 @@
 .Characters {
   background-image: url('/static/wall/head.png');
 }
+
+.Content {
+  max-width: 1100px;
+  margin: auto;
+  padding: 2rem;
+}
