--- a/pages/index/styles.scss
+++ b/pages/index/styles.scss
@@ -1,3 +1,5 @@
+@import 'styles/variables.scss';
+
 .Section {
   background-position: center;
   background-repeat: no-repeat;
@@ -7,10 +9,13 @@
 }
 
 
-.Locations {
-  background-image: url('/static/wall/shadow.png');
-}
-
-.Episodes {
-  background-image: url('/static/wall/sun.jpg');
+.Mask {
+  position: absolute;
+  background: $background-primary;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
