Add Filters to characters

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -12,3 +12,6 @@ $dark-text: #424242;
 $medium-text: #616161;
 $light-text: #9e9e9e;
 $very-light-text: #bdbdbd;
+
+// Border
+$medium-border: #9e9e9e;
