--- a/components/Lists/Infinity/styles.scss
+++ b/components/Lists/Infinity/styles.scss
@@ -1,16 +1,30 @@
 .Page {
-  width: 100%;
-  overflow-y: hidden;
   h1 {
     padding: 2rem;
   }
 }
 
+.ListParent {
+  width: 100%;
+  overflow-y: hidden;
+}
+
 .List {
   margin: auto;
-  padding: 2rem 1rem;
+  padding: 2rem 0;
   display: flex;
   max-width: 1100px;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+
+.Content {
+  max-width: 1100px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.NoResults, .Spinner {
+  margin-top: 10rem;
 }
