--- a/components/Lists/Infinity/styles.scss
+++ b/components/Lists/Infinity/styles.scss
@@ -1,4 +1,5 @@
 .Page {
+  overflow-y: hidden;
   h1 {
     padding: 2rem;
   }
@@ -10,6 +11,7 @@
 }
 
 .List {
+  overflow-y: hidden;
   margin: auto;
   padding: 2rem 0;
   display: flex;
@@ -23,6 +25,7 @@
   margin: auto;
   display: flex;
   justify-content: center;
+  overflow-y: hidden;
 }
 
 .NoResults, .Spinner {
